# cl

./: CHANGELOG.md  Cargo.toml  README.md
.cl/: add-aggregate-command.yml  add-yanked-command.yml  git-add-on-change-entry.yml
src/: main.rs
