[package]
name = "cl"
version = "0.1.0"
description = "A command line tool for recording changes to be collected for use in a Keep A Changelog formatted CHANGELOG.md"
authors = ["Marc Addeo <hi@marc.cx>"]
edition = "2018"

[dependencies]
derive_builder = "0.7.2"
failure = "0.1.5"
clap = { version = "2.33.0", features = ["yaml", "suggestions", "color"] }
fstrings = "0.1.4"
clparse = { version = "0.1.0", git = "https://github.com/marcaddeo/clparse" }
scan_dir = "0.3.3"
git2 = "0.10.1"
serde = "1.0.101"
serde_yaml = "0.8.9"
serde_json = "1.0.41"
