[package]
name = "cl"
version = "0.6.0"
description = "A command line tool for recording changes to be collected for use in a Keep A Changelog formatted CHANGELOG.md"
authors = ["Marc Addeo <hi@marc.cx>"]
edition = "2018"

[dependencies]
derive_builder = "0.8.0"
clap = { version = "2.33.0", features = ["yaml", "suggestions", "color"] }
clparse = { version = "0.4.0", git = "https://github.com/marcaddeo/clparse", tag = "0.4.0" }
scan_dir = "0.3.3"
git2 = { version = "0.10.1", features = ["vendored-openssl"] }
serde = "1.0.101"
serde_yaml = "0.8.11"
serde_json = "1.0.41"
err-derive = "0.1.6"
anyhow = "1.0.3"
