[package]
name = "cl"
version = "0.7.0"
description = "A command line tool for recording changes to be collected for use in a Keep A Changelog formatted CHANGELOG.md"
keywords = ["changelog", "manager", "keepachangelog"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
homepage = "https://github.com/marcaddeo/cl"
repository = "https://github.com/marcaddeo/cl"
documentation = "https://github.com/marcaddeo/cl#cl"
authors = ["Marc Addeo <hi@marc.cx>"]
license = "MIT"
edition = "2018"
exclude = [
    ".cl",
    ".gitignore",
    "scripts"
]

[dependencies]
derive_builder = "0.8.0"
clap = { version = "2.33.0", features = ["yaml", "suggestions", "color"] }
scan_dir = "0.3.3"
git2 = { version = "0.10.1", features = ["vendored-openssl"] }
serde = "1.0.101"
serde_yaml = "0.8.11"
serde_json = "1.0.41"
err-derive = "0.1.6"
anyhow = "1.0.31"
clparse = "0.7.0"
semver = "0.10.0"
